# fails

./: .env  .gitignore  CLAUDE.md  README.md  WEAVE_QUERY_API.md  main.py  pipe_test.py  pipeline_scorers.py  pipeline_weave_eval.py  pyproject.toml  requirements.txt  simple_evaluation_test.py  summarize_json.py  test_scorers_only.py  test_selector.py
config/: example_failure_categorization_config.yaml  fails-eval_speaker_classification_config.yaml  speaker_classification_eval_config.yaml  test_config.yaml
evals/: speaker_classification.py
evals/datasets/: download_weave_dataset.py
evals/speaker_classification/: download_weave_dataset.py  speaker_classification.py
evaluation/fails_eval/: failure_categorization_eval.py  scorers.py
evaluation/speaker_classification/: README.md  download_weave_dataset.py  speaker_classification.py
fails/: console.py  failure_categorization_eval.py  pipeline.py  prompts.py  scorers.py  spinner.py  utils.py  utis.py  weave_query.py
fails/cli/: arrow_selector.py  column_context_selector.py  config_selector.py  context_collector.py  evaluation_selector.py  failure_selector.py  header.py
